force-app/main/default/objects/Receipt__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <precision>14</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>