force-app/main/default/objects/Receipt__c/fields/Form_26QB_Reference__c.field-meta.xml
<CustomField>
    <fullName>Form_26QB_Reference__c</fullName>
    <label>Form 26QB Reference</label>
    <length>60</length>
    <type>Text</type>
</CustomField>