force-app/main/default/objects/Receipt__c/fields/Instrument_Reference__c.field-meta.xml
<CustomField>
    <fullName>Instrument_Reference__c</fullName>
    <label>Instrument Reference</label>
    <length>60</length>
    <type>Text</type>
</CustomField>