force-app/main/default/objects/Receipt__c/fields/Payer_PAN__c.field-meta.xml
<CustomField>
    <fullName>Payer_PAN__c</fullName>
    <label>Payer PAN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>