force-app/main/default/objects/Receipt__c/fields/Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Payment_Mode__c</fullName>
    <label>Payment Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>NEFT</fullName><default>false</default><label>NEFT</label></value>
            <value><fullName>RTGS</fullName><default>false</default><label>RTGS</label></value>
            <value><fullName>IMPS</fullName><default>false</default><label>IMPS</label></value>
            <value><fullName>Cheque</fullName><default>false</default><label>Cheque</label></value>
            <value><fullName>DD</fullName><default>false</default><label>DD</label></value>
            <value><fullName>UPI</fullName><default>false</default><label>UPI</label></value>
            <value><fullName>Card</fullName><default>false</default><label>Card</label></value>
            <value><fullName>Cash</fullName><default>false</default><label>Cash</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>