force-app/main/default/objects/Receipt__c/fields/Reconciled_By__c.field-meta.xml
<CustomField>
    <fullName>Reconciled_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reconciled By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Receipts Reconciled</relationshipLabel>
    <relationshipName>Receipts_Reconciled</relationshipName>
    <type>Lookup</type>
</CustomField>