force-app/main/default/objects/Receipt__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Received</fullName><default>true</default><label>Received</label></value>
            <value><fullName>Under Reconciliation</fullName><default>false</default><label>Under Reconciliation</label></value>
            <value><fullName>Reconciled</fullName><default>false</default><label>Reconciled</label></value>
            <value><fullName>Reversed</fullName><default>false</default><label>Reversed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>